# textEditor

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cmake/api/v1/reply/: cache-v2-a2264c7ef3fa6b7e2ca8.json  cmakeFiles-v1-1fecf8e86995c3908b32.json  codemodel-v2-bb05985abc4e8b99ef29.json  directory-_deps.ftxui-build-Debug-2cf7d10cd0777b16e1c2.json  index-2024-12-10T06-05-44-0930.json  target-component-Debug-2a452ea2840ba2ddedd4.json  target-dom-Debug-35dc9bbcf9b738937a8e.json  target-main-Debug-4006d426c4569dd3b862.json  target-screen-Debug-1a81c9dc100e42e23b67.json
src/: file.cpp  file.h  main.cpp  styles.cpp  styles.h
testData/: a.txt  test.txt
